--- a/css/common.css
+++ b/css/common.css
@@ -41,7 +41,7 @@ header {
 }
 
 .search button {
-    background: url("../img/icon-search-f5f5f5.svg") #0d5611 no-repeat;
+    background: url("../img/icon/icon-search-f5f5f5.svg") #0d5611 no-repeat;
     background-position: center;
     display: inline-block;
     margin-right: 8px;
@@ -108,25 +108,25 @@ header {
 }
 
 .menu_brand a {
-    background-image: url("../img/icon-document-d4d4d4.svg");
+    background-image: url("../img/icon/icon-document-d4d4d4.svg");
     background-repeat:no-repeat;
     background-position:left center;
     background-size:24px;
 }
 .menu_list a {
-    background-image: url("../img/icon-list-d4d4d4.svg");
+    background-image: url("../img/icon/icon-list-d4d4d4.svg");
     background-repeat:no-repeat;
     background-position:left center;
     background-size:24px;
 }
 .menu_cart a {
-    background-image: url("../img/icon-cart-d4d4d4.svg");
+    background-image: url("../img/icon/icon-cart-d4d4d4.svg");
     background-repeat:no-repeat;
     background-position:left center;
     background-size:24px;
 }
 .menu_my a {
-    background-image: url("../img/icon-my-d4d4d4.svg");
+    background-image: url("../img/icon/icon-my-d4d4d4.svg");
     background-repeat:no-repeat;
     background-position:left center;
     background-size:24px;
