--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     width: 100%;
     overflow: hidden;
     position: relative;
-    height: 480px; /**/
+    height: 480px;
 }
 
 #main_banner #slider {
@@ -67,8 +67,13 @@
     line-height: 30px;
 }
 
-.main_nav {
+
+nav {
     padding: 48px 0;
+}
+
+#main_nav_1 {
+    margin-bottom: 48px;
 }
 
 .main_nav ul {
@@ -180,11 +185,56 @@ section .section_head p a img {
     display: flex;
     flex-wrap:wrap;
     box-sizing:border-box;
+    gap: 20px;
+    position: relative;
 }
+
+.banchan_list .prev {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    background-color: #fff;
+    border: 1px solid #E5E5E5;
+    box-sizing: border-box;
+    position: absolute;
+    top: 120px;
+    left: -20px;
+    text-align: center;
+    line-height: 48px;
+    cursor: pointer;
+    margin: 0px;
+    display: none;
+}
+
+.banchan_list .next {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    background-color: #fff;
+    border: 1px solid #E5E5E5;
+    box-sizing: border-box;
+    position: absolute;
+    top: 120px;
+    right: -20px;
+    text-align: center;
+    line-height: 48px;
+    cursor: pointer;
+    margin: 0px;
+}
+
+.banchan_list_tall .prev {
+    top: 170px;
+}
+
+.banchan_list_tall .next {
+    top: 170px;
+}
+
 
 .banchan_list_tall .product {
     width: 280px;
-    margin-right:15px;
     margin-bottom:20px;
 }
 
@@ -195,7 +245,6 @@ section .section_head p a img {
 
 .banchan_list_rec .product {
     width: 280px;
-    margin-right:15px;
     margin-bottom:20px;
 }
 
